--- a/src/main/resources/templates/dashboard/_layout/master.html
+++ b/src/main/resources/templates/dashboard/_layout/master.html
@@ -74,7 +74,7 @@
                                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                                        class="p-0 btn">
                                         <img width="42" class="rounded-circle"
-                                             th:src="|/front/data-images/user/${currentUser.image ?: '_default-user.png'}|"
+                                             th:src="|/front/data-images/user/${_auth_currentUser.image ?: '_default-user.png'}|"
                                              alt="image-user">
                                         <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                     </a>
@@ -90,7 +90,7 @@
                                                         <div class="widget-content-wrapper">
                                                             <div class="widget-content-left mr-3">
                                                                 <img width="42" class="rounded-circle"
-                                                                     th:src="|/front/data-images/user/${currentUser.image ?: '_default-user.png'}|"
+                                                                     th:src="|/front/data-images/user/${_auth_currentUser.image ?: '_default-user.png'}|"
                                                                      alt="image-user">
                                                             </div>
                                                             <div class="widget-content-left">
