--- a/src/main/resources/templates/mail/demo-template-thymeleaf.html
+++ b/src/main/resources/templates/mail/demo-template-thymeleaf.html
@@ -8,14 +8,8 @@
     <p th:text="${text}"></p>
 
     <p>
-      attachment_resourceFile:
-      <img src="cid:attachment_resourceFile.png" />
-
-      <br>
-
-      attachment_fileSystemResource:
-      <img src="cid:attachment_fileSystemResource.png" />
-
+      <img src="cid:favicon-front.png" />
     </p>
+
   </body>
 </html>
