UPDATE: Chuyển hướng sau đăng nhập dùng ?continueUri=

--- a/src/main/resources/templates/front/checkout/index.html
+++ b/src/main/resources/templates/front/checkout/index.html
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="text-center">
-                                        <a href="../account/login" class="btn btn-primary"><span>Login</span></a>
+                                        <a href="../account/login?continueUri=checkout" class="btn btn-primary"><span>Login</span></a>
                                         <a href="../account/register" class="btn btn-outline-primary"><span>Register now!</span></a>
                                     </div>
                                 </div>
