NEW: Phân quyền theo http-method: button submit

--- a/src/main/resources/templates/dashboard/product/create-edit.html
+++ b/src/main/resources/templates/dashboard/product/create-edit.html
@@ -185,13 +185,8 @@
                                                 <span>Cancel</span>
                                             </a>
 
-                                            <button type="submit"
-                                                    class="btn-shadow btn-hover-shine btn btn-primary">
-                                                    <span class="btn-icon-wrapper pr-2 opacity-8">
-                                                        <i class="fa fa-download fa-w-20"></i>
-                                                    </span>
-                                                <span>Save</span>
-                                            </button>
+                                            <span th:replace="dashboard/_fragments/button :: submit"></span>
+
                                         </div>
                                     </div>
                                 </form>
