FIX: sai tên biến: first_name, last_name -> firstName, lastName

--- a/src/main/resources/templates/dashboard/order/index.html
+++ b/src/main/resources/templates/dashboard/order/index.html
@@ -100,7 +100,7 @@
                                                 </div>
                                             </div>
                                         </td>
-                                        <td class="text-center" th:text="${order.user.first_name + ', ' + order.user.last_name}"></td>
+                                        <td class="text-center" th:text="${order.user.firstName + ', ' + order.user.lastName}"></td>
                                         <td class="text-center" th:text="${order.deliveryAddress}"></td>
                                         <td class="text-center" th:text="${'$' + order.totalAmount}"></td>
                                         <td class="text-center">
