--- a/src/main/resources/templates/dashboard/restaurant/show.html
+++ b/src/main/resources/templates/dashboard/restaurant/show.html
@@ -45,13 +45,9 @@
                     <li class="nav-item delete">
                         <form class="d-inline"
                               th:action="@{|/admin/restaurant/${restaurant.id}|}" th:method="DELETE">
-                            <button class="btn nav-link"
-                                    onclick="return confirm('Do you really want to delete this item?')">
-                                <span class="btn-icon-wrapper opacity-8">
-                                    <i class="fa fa-trash fa-w-20"></i>
-                                </span>
-                                <span class="ml-1"> Delete</span>
-                            </button>
+
+                            <span th:replace="dashboard/_fragments/button :: deleteOnShow"></span>
+
                         </form>
                     </li>
                 </ul>
